[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "Referent Tracking 2.0"
version = "0.0.1"

[tool.setuptools.packages.find]
#find = {}  # Scan the project directory with the default parameters
where = ["src"]

[project]
name = "rt_two"
version = "0.0.1"
authors = [
  { name="Bill Hogan", email="hoganwr@gmail.com" },
]
description = "Python implementation of Referent Tracking 2.0"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [
  "src/rt_core_v2",
  "src/rt_core_v2/ids_codes",
  "src"
]
testpaths = [
  "tests"
]